--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -31,6 +31,7 @@
                 <div {$curr_systemdisplay}>
 				    <a href="{spUrl c=admin a=models}" {$curr_models}>模型管理</a>
                     <a href="{spUrl c=admin a=cpage}" {$curr_cpage}>自定义页面管理</a>
+                    <a href="{spUrl c=admin a=term}" {$curr_term}>网站栏目管理</a>
 				</div>
 
 				<li><a href="{spUrl c=admin a=blog}" {$curr_blog}><span class="f_blog">内容管理</span></a></li>
