--- a/tplv2/admin/term.html
+++ b/tplv2/admin/term.html
@@ -14,6 +14,7 @@
             	<th width="20"></th>
                 <th width="30" class="m_title">排序</th>
                 <th width="300">标题</th>
+                <th width="200">父类标题</th>
                 <th width="110">操作</th>
             </tr>
             {foreach from=$list item=vo}
@@ -22,15 +23,14 @@
 
                 </th>
                 <th width="30" class="m_title">
-                    <input type="text" value="{$vo.order}" style="width: 50px;text-align: center;height: 20px;line-height: 20px;" />
+                    <input type="text" value="{$vo.order}" style="margin-left:10px;width: 50px;text-align: center;height: 20px;line-height: 20px;" />
                 </th>
                 <th width="300" style="text-align: left;">
                     <input type="text" value="{$vo.name}" style="text-align: left;height: 20px;line-height: 20px;" />
                 </th>
+                <th width="300">父类标题</th>
                 <td class="fun_con">
-                    <a class="f_category" href="{spUrl c=admin a=cpage editCategory=$vo.id}" title="修改分类">分类</a>
-                    <a class="f_edit" href="{spUrl c=admin a=cpage addBody=$vo.id}" title="编辑">编辑</a>
-                    <a class="f_delete" href="{spUrl c=admin a=cpage del=$vo.id}" onclick="return confirm('删除分类会将分类下的内容一块删除,确认删除?')" title="删除">删除</a>
+                    <a class="f_delete" href="{spUrl c=admin a=cpage del=$vo.id}" title="删除">删除</a>
                 </td>
             </tr>
             {/foreach}
