--- a/templet/baoding/index.html
+++ b/templet/baoding/index.html
@@ -1,10 +1,16 @@
-<!DOCTYPE html>
-<html>
+{include file="./templet/baoding/js.php"}
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml">
 <head lang="en">
-    <meta charset="UTF-8">
-    <title></title>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+   {include file="./templet/baoding/css.html"}
+   {include file="./templet/baoding/js.html"}
+   <title></title>
 </head>
 <body>
-
+	{php}
+		echo $aa = spClass("fetch","","./api/fetch.php")->nihao();
+	{/php}
+<!-- {include file="./templet/baoding/header.html"} -->
 </body>
 </html>
