--- a/templet/baoding/index.html
+++ b/templet/baoding/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	{php}
-		echo $aa = spClass("fetch","","./api/fetch.php")->nihao();
+		$aa = spClass("db_term")->find(array("id"=>1));
 	{/php}
 <!-- {include file="./templet/baoding/header.html"} -->
 </body>
