--- a/tplv2/models/music.html
+++ b/tplv2/models/music.html
@@ -1,9 +1,22 @@
 {include file="require_header.html" addcss=yes editor=yes titlepre="发布音乐"}
+<script type="text/javascript">
+	var success_s = {$success_s};
+	function hasParent(){
+		if(top.location != self.location){
+			if(success_s === 1){
+				alert("添加成功！");
+			}
+			var input = '<input type="hidden" name="iframe_do" value="1" />';
+			$("#form1").append(input);
+	    }
+	}
+</script>
 {literal}
 <script>
 
 
 $(document).ready(function(){
+	hasParent();
 
 	var lastkey,_timer,_focus,msl_timer,cpage,pcount,skey,newsearch;
 	var msk=$("#music_search_key");
