--- a/tplv2/models/word.html
+++ b/tplv2/models/word.html
@@ -1,4 +1,16 @@
 {include file="require_header.html" addcss=yes editor=yes titlepre="发布文字 - {$smarty.session.tempid}"}
+<script type="text/javascript">
+	var success_s = {$success_s};
+	function hasParent(){
+		if(top.location != self.location){
+			if(success_s === 1){
+				alert("添加成功！");
+			}
+			var input = '<input type="hidden" name="iframe_do" value="1" />';
+			$("#form1").append(input);
+	    }
+	}
+</script>
 {literal}
 <script>
 $(document).ready(function(){
@@ -48,6 +60,8 @@ $(document).ready(function(){
 		$.isChange.Set("#title,#textarea");
 		$.isChange.unSet("#form1");
 
+		
+		hasParent();
 });
 </script>
 {/literal}
