--- a/tplv2/require_header.html
+++ b/tplv2/require_header.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="zh-cn">
 <head>
-    <title>{if $titlepre}{$titlepre} -{/if} {$title} {$yb.site_title}  {$yb.site_titlepre} - Powered by 云边轻博</title>
+    <title>{if $titlepre}{$titlepre} -{/if} {$title} {$yb.site_title}  {$yb.site_titlepre}</title>
     <meta charset="utf-8" />
     <meta name="author" content="{$yb.author}" />
     <meta name="description" content="{if $description}{$description}{/if}{$yb.site_desc} " />
