--- a/tplv2/require_models_js.html
+++ b/tplv2/require_models_js.html
@@ -501,7 +501,7 @@
 
 <script type="text/html" id="feed_template">
 {each blog as data i}
-<div class="box" id="blog_{data.bid}">
+<div class="box111" id="blog_{data.bid}">
 	{include tpl_header_define('header') data}
 		{include tpl_feed_define(data.type) data}
 	{include tpl_header_define('footer') data}
