--- a/tplv2/require_models_js.html
+++ b/tplv2/require_models_js.html
@@ -330,7 +330,9 @@
 			<p>
 			{if attr.length >0}
 			{each attr as img i}
-				{if i <1} <a href="{b_url}" target="_blank"><img src="{img}"/></a> {/if}
+				{if i <1} 
+				<a href="{b_url}" target="_blank"><img src="{img}"/></a>
+				 {/if}
 			{/each}
 			{/if}
 			
