--- a/tplv2/admin/header.html
+++ b/tplv2/admin/header.html
@@ -37,11 +37,12 @@
 				<li><a href="{spUrl c=admin a=blog}" {$curr_blog}><span class="f_blog">内容管理</span></a></li>
 				<div {$curr_blogdisplay}>
 					<a href="{spUrl c=admin a=article_add}" {$curr_content_add}>添加内容</a>
+					<a href="{spUrl c=admin a=article_list}" {$curr_content_list}>内容列表</a>
 				    <a href="{spUrl c=admin a=blog}" {$curr_ablog}>博客内容</a>
 					 <a href="{spUrl c=admin a=blogverify}" {$curr_ablogverify}>内容审核</a>
 				    <a href="{spUrl c=admin a=systag}" {$curr_systag}>系统标签</a>
 					 <a href="{spUrl c=admin a=usertag}" {$curr_usertag}>用户标签</a>
-					 <a href="{spUrl c=admin a=sort}" {$curr_sort}>分类管理</a>
+					 <!-- <a href="{spUrl c=admin a=sort}" {$curr_sort}>分类管理</a> -->
 
 					<!--
 					<a href="{spUrl c=admin a=recommend}" {$curr_recommend}>推荐</a>
