--- a/templet/baoding/information.html
+++ b/templet/baoding/information.html
@@ -50,76 +50,7 @@
                     </div>
                 </div>
             </div>
-            <div class="right rhz">
-                <h3>幼儿园预约试听</h3>
-                <table>
-                    <tr>
-                        <td class="wenz left">宝宝姓名：</td>
-                        <td class="text left">
-                            <input type="text" value="" name="" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">联系电话：</td>
-                        <td class="text left">
-                            <input type="text" value="" name="" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">选择省份：</td>
-                        <td class="text left">
-                            <select name="">
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">选择区县：</td>
-                        <td class="text left">
-                            <select name="">
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">选择园所：</td>
-                        <td class="text left">
-                            <select name="">
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">试听时间：</td>
-                        <td class="text left">
-                            <input type="text" value="" name="" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">验证码：</td>
-                        <td class="yzm left">
-                            <input class="left" type="text" value="" name="" />
-                            <span class="left"><img src="{$skin_path}images/yanzhenm.jpg" /></span>
-                        </td>
-                    </tr>
-                </table>
-                <p>
-                    <input name="" type="button" value="提交" />
-                </p>
-            </div>
-            <div class="clear"></div>
+            {include_php './templet/baoding/public/shiting.php'}
         </div>
     </div>
 {/block}
