--- a/templet/baoding/information_list.html
+++ b/templet/baoding/information_list.html
@@ -44,14 +44,16 @@
                             {/if}
                             <!--开始循环页码，同时如果循环到当前页则不显示链接-->
                             {foreach from=$pager.all_pages item=thepage}
-                                {if $thepage != $pager.current_page}
-                                    <li class="sz">
-                                        <a href="{spUrl c=information_list tid=$tid a=index page=$thepage}">{$thepage}</a>
-                                    </li>
-                                {else}
-                                    <li class="sz hover">
-                                        <a href="javascript:;">{$thepage}</a>
-                                    </li>
+                                {if $thepage eq $pager.current_page -1 or $thepage eq $pager.current_page or $thepage eq $pager.current_page + 1}
+                                    {if $thepage != $pager.current_page}
+                                        <li class="sz">
+                                            <a href="{spUrl c=information_list tid=$tid a=index page=$thepage}">{$thepage}</a>
+                                        </li>
+                                    {else}
+                                        <li class="sz hover">
+                                            <a href="javascript:;">{$thepage}</a>
+                                        </li>
+                                    {/if}
                                 {/if}
                             {/foreach}
                             <!--在当前页不是最后一页的时候，显示下一页和后页-->
@@ -64,76 +66,7 @@
                     </ul>
                 </div>
             </div>
-            <div class="right rhz">
-                <h3>幼儿园预约试听</h3>
-                <table>
-                    <tr>
-                        <td class="wenz left">宝宝姓名：</td>
-                        <td class="text left">
-                            <input type="text" value="" name="" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">联系电话：</td>
-                        <td class="text left">
-                            <input type="text" value="" name="" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">选择省份：</td>
-                        <td class="text left">
-                            <select name="">
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">选择区县：</td>
-                        <td class="text left">
-                            <select name="">
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">选择园所：</td>
-                        <td class="text left">
-                            <select name="">
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                                <option>河北省</option>
-                            </select>
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">试听时间：</td>
-                        <td class="text left">
-                            <input type="text" value="" name="" />
-                        </td>
-                    </tr>
-                    <tr>
-                        <td class="wenz left">验证码：</td>
-                        <td class="yzm left">
-                            <input class="left" type="text" value="" name="" />
-                            <span class="left"><img src="{$skin_path}images/yanzhenm.jpg" /></span>
-                        </td>
-                    </tr>
-                </table>
-                <p>
-                    <input name="" type="button" value="提交" />
-                </p>
-            </div>
-            <div class="clear"></div>
+            {include_php './templet/baoding/public/shiting.php'}
         </div>
     </div>
 {/block}
