--- a/tplv2/admin/term_edit.html
+++ b/tplv2/admin/term_edit.html
@@ -42,6 +42,13 @@
                         </td>
                     </tr>
                     <tr>
+                        <td class="t_title">导航显示</td>
+                        <td class="c_input_small">
+                            <input type="radio" name="nav" value="0" {$nav_false} style="height:auto;width:auto;">否
+                            <input type="radio" name="nav" value="1" {$nav_true} style="height:auto;width:auto;">是
+                        </td>
+                    </tr>
+                    <tr>
                         <td class="t_title">模板名称</td>
                         <td class="c_input_small">
                             <input id="tpl" name="tpl" value="{$term.tpl}" type='text' />
