--- a/templet/baoding/information_list.html
+++ b/templet/baoding/information_list.html
@@ -39,7 +39,7 @@
                             <!--在当前页不是第一页的时候，显示前页和上一页-->
                             {if $pager.current_page != $pager.first_page}
                                 <li class="syy">
-                                    <a href="{spUrl c=information_list tid=$tid a=index page=$pager.prev_page}"> < </a>
+                                    <a href="{spUrl c=information_list tid=$tid a=index page=$pager.prev_page}"> &lt; </a>
                                 </li>
                             {/if}
                             <!--开始循环页码，同时如果循环到当前页则不显示链接-->
@@ -59,7 +59,7 @@
                             <!--在当前页不是最后一页的时候，显示下一页和后页-->
                             {if $pager.current_page != $pager.last_page}
                                 <li class="syy">
-                                    <a href="{spUrl c=information_list tid=$tid a=index page=$pager.next_page}"> > </a>
+                                    <a href="{spUrl c=information_list tid=$tid a=index page=$pager.next_page}"> &gt; </a>
                                 </li>
                             {/if}
                         {/if}                        
