--- a/tplv2/admin/article_add.html
+++ b/tplv2/admin/article_add.html
@@ -54,6 +54,13 @@
                         </td>
                     </tr>
                     <tr>
+                        <td class="t_title">文章来源</td>
+                        <td class="c_input_small">
+                            <div style="height: 10px;"></div>
+                            <input type="text" name="from" value="" />
+                        </td>
+                    </tr>
+                    <tr>
                         <td class="t_title">文章图组</td>
                         <td class="c_input_small">
                             <div style="height: 10px;"></div>
