--- a/templet/baoding/mzsp.html
+++ b/templet/baoding/mzsp.html
@@ -13,13 +13,15 @@
                 <div class="mzsp_nr">
                     <div class="txtx_top">
                         <p class="shangz">
-                            <a href="">
-                                << 上一周 </a>
+                            <a href="{spUrl c=mzsp week=$upweek tid=$cTerm.id}">
+                                << 上一周 
+                            </a>
                         </p>
-                        <p class="xiaox"><img src="{$skin_path}images/xiaox.png" />
+                        <p class="xiaox">
+                            <img src="{$skin_path}images/xiaox.png" />
                         </p>
                         <p class="riqi">01/05 - 01/09</p>
-                        <p class="xiaz"><a href=""> 下一周  >> </a>
+                        <p class="xiaz"><a href="{spUrl c=mzsp week=$nextweek tid=$cTerm.id}"> 下一周  >> </a>
                         </p>
                         <div class="clear"></div>
                     </div>
@@ -52,56 +54,16 @@
                             </li>
                         </ul>
                         <ul class="left ysb_right">
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
-                            <li title="小糖包\什锦疙瘩汤\茶叶蛋\什锦疙瘩汤"><img src="{$skin_path}images/beij.jpg" /><span>小糖包,什锦疙瘩汤,茶叶蛋,什锦疙瘩汤</span>
-                            </li>
+                            {foreach $week_data as $vo}
+                                {foreach $vo as $v}
+                                    <li title="{$v}">
+                                        <img src="{$skin_path}images/beij.jpg" />
+                                        <span>{$v|vstr_replace:"\n":"<br />"}</span>
+                                    </li>
+                                {/foreach}
+                            {/foreach}
+                            
+                            
                         </ul>
                         <div class="clear"></div>
                     </div>
