--- a/tplv2/admin/article_list.html
+++ b/tplv2/admin/article_list.html
@@ -31,10 +31,6 @@
 			<h2>列表</h2>
 		</div>
 		<div class="navpage">{$pager}<div class="clear"></div></div>
-		
-		<input class="btn_return" type="button" onclick="checkAll('ckeckbox')" value="全选" name="button">
-		<input class="btn_del submit" type="button" value="删除" onclick="delblog_all()">
-		
 		      	<table width="100%" border="0" cellspacing="0" cellpadding="0" class="table_model">
 			    	<tr class="table_title">
 					  	<th width="30" class="m_title">操作</th>
@@ -47,8 +43,10 @@
 				   	</tr>
 				    {foreach from=$article_list item=d}
 				   	<tr class="table_hover" id="article_{$d.id}">
-				     	<td class="m_title" style="padding-top:13px">
-                            <input id="checkbox" class="ckeckbox" type="checkbox" name="delid" delid="{$d.id}"></td>
+				     	<td class="m_title fun_con mfun" style="padding-top:13px">
+                        	<a class="f_edit mtop" href="{spUrl c=admin a=article_add id=$d.id}" target="_blank">编辑</a>
+						  	<a class="f_delete mtop" href="javascript:;" onclick="del_article({$d.id})">删除</a>    
+                        </td>
 				      	<td>{$d.id}</td>
 					  	<td class="tt_title">
 					  		<a href="javascript:;" target="_blank">{if $d.title == ''}没有标题{else}{$d.title}{/if}</a>
@@ -58,14 +56,27 @@
 					  	<td>{$d.create_time|date_format:"%Y-%m-%d"}</td>
 					  	<td class="fun_con mfun">
 					      	<a class="f_edit mtop" href="{spUrl c=admin a=article_add id=$d.id}" target="_blank">编辑</a>
-						  	<a class="f_delete mtop" href="javascript:;" onclick="delblogs({$d.id})">删除</a>
+						  	<a class="f_delete mtop" href="javascript:;" onclick="del_article({$d.id})">删除</a>
 						</td>
 				   	</tr>
 				   	{/foreach}
 			  	</table>
 
 	</div>
-	<input class="btn_del submit" type="button" value="删除" onclick="delblog_all()">
 	<div class="navpage">{$pager}<div class="clear"></div></div>
+	<script>
+		function del_article(id){
+			if(confirm("确定要删除此文章吗？")){
+		    	$.post('{spUrl c=admin a=article_del}', { id : id }, function(data) {
+		    		if(data === '1'){
+		    			alert("删除成功");
+		    			window.location.reload();
+		    		}else {
+		    			alert("删除失败");
+		    		}
+		    	});
+		   	}
+		}
+	</script>
 </div>
 {include file='admin/footer.html'}
