--- a/templet/phone/introduction.html
+++ b/templet/phone/introduction.html
@@ -28,8 +28,8 @@
         	</div>
 			<div class="det_handle">
 				{if $flag}
-		    	 <p class="p_prev"><a href="{$up.href} data-aiax='false'">上一篇：{$up.title|msubstr:'0':'6'}</a></p> 
-		         <p class="p_next"><a href="{$next.href} data-aiax='false'">下一篇：{$next.title|msubstr:'0':'6'}</a></p>
+		    	 <p class="p_prev"><a href="{$up.href} data-ajax='false'">上一篇：{$up.title|msubstr:'0':'6'}</a></p> 
+		         <p class="p_next"><a href="{$next.href} data-ajax='false'">下一篇：{$next.title|msubstr:'0':'6'}</a></p>
 		        {/if}
 
 		    </div>
